# sgir_backend

./: .env  .gitignore  Dockerfile  README.md  SUMMARY.md  check_metrics.py  init-db.sql  pyproject.toml  workflow.txt
app/: main.py
app/bd/postgres/: connection.py
app/core/: config.py  config_core.py  dependencies.py  dynamic_db.py  dynamic_db_core.py  dynamic_ssh_core.py  scheduler_manager.py  security.py  security_core.py  ssh_orchestrator.py
app/core/security/: encryption.py  hashing.py  tokens.py
app/crud/: audit.crud.py  audit_crud.py  backup_crud.py  infrastructure.crud.py  infrastructure_crud.py  monitoring_persistence_crud.py  user.crud.py  user.py  user_crud.py
app/db/mongodb/: mongo8.connection.py  mongo8_connection.py
app/db/mysql/: mysql5.connection.py  mysql5.py  mysql5_connection.py  mysql8.connection.py  mysql8_connection.py
app/db/oracle/: oracle10.connection.py  oracle10_connection.py  (+4 more)
app/models/: audit.model.py  audit_model.py  backup_models.py  infrastructure.py  infrastructure_models.py  monitoring_persistence.models.py  monitoring_persistence_models.py  user.py  user_models.py
app/routes/: __init__.py  health.py
app/schemas/: __init__.py  audit_schemas.py  backup.schemas.py  backup_schemas.py  estado_general_schemas.py  infrastructure_schemas.py  monitoring_persistence.py  monitoring_persistence_schemas.py  user.schemas.py  user_schemas.py
app/services/: audit_crud.py  backup_crud.py  infrastructure_crud.py  inventory_sync_service.py  status_crud.py  user_crud.py
test/: test_core_crud.py  test_healths.py  test_monitoring.py
(+96 files in other folders)
