[project]
name = "sgir-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.6",
    "email-validator>=2.3.0",
    "fastapi>=0.135.2",
    "motor>=3.7.1",
    "oracledb>=3.4.2",
    "paramiko>=4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "types-paramiko>=4.0.0.20260402",
]
